test/spec_vectors/local_set/fail/module_19.wat
(module (func $type-param-arg-empty-vs-num-in-call (param i32) (call 1 (local.set 0))) (func (param i32) (result i32) (local.get 0)))